Floating point precision error in AudioPannerNode. https://bugs.webkit.org/show_bug.cgi?id=106001

Patch by Praveen Jadhav <praveen.j@samsung.com> on 2013-02-05
Reviewed by Kentaro Hara.

Specifications Update:
https://dvcs.w3.org/hg/audio/rev/69a39a516e45

Source/WebCore:

Conversion from double to float and back to double
results in precision error. Avoiding these conversions
will make sure that proper values are retained in the
parameters.

* Modules/webaudio/PannerNode.h:
(WebCore::PannerNode::refDistance):
(WebCore::PannerNode::setRefDistance):
(WebCore::PannerNode::maxDistance):
(WebCore::PannerNode::setMaxDistance):
(WebCore::PannerNode::rolloffFactor):
(WebCore::PannerNode::setRolloffFactor):
(WebCore::PannerNode::coneInnerAngle):
(WebCore::PannerNode::setConeInnerAngle):
(WebCore::PannerNode::coneOuterAngle):
(WebCore::PannerNode::setConeOuterAngle):
(WebCore::PannerNode::coneOuterGain):
(WebCore::PannerNode::setConeOuterGain):
* Modules/webaudio/PannerNode.idl:

LayoutTests:

New test scenarios are added to verify precision
error issues in PannerNode.

* webaudio/pannernode-basic-expected.txt:
* webaudio/pannernode-basic.html:

Canonical link: https://commits.webkit.org/127126@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141867 268f45cc-cd09-0410-ab3c-d52691b4dbfc